; ModuleID = '/home/carl/AnghaBench/postgres/src/fe_utils/extr_string_utils.c_appendStringLiteralConn.c'
source_filename = "/home/carl/AnghaBench/postgres/src/fe_utils/extr_string_utils.c_appendStringLiteralConn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i8* }

@ESCAPE_STRING_SYNTAX = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @appendStringLiteralConn(%struct.TYPE_6__* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i64 @strlen(i8* %8)
  store i64 %9, i64* %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32* @strchr(i8* %10, i8 signext 92)
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %47

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @PQserverVersion(i32* %14)
  %16 = icmp sge i32 %15, 80100
  br i1 %16, label %17, label %47

17:                                               ; preds = %13
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp sgt i32 %20, 0
  br i1 %21, label %22, label %38

22:                                               ; preds = %17
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 1
  %25 = load i8*, i8** %24, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = sub nsw i32 %28, 1
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i8, i8* %25, i64 %30
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp ne i32 %33, 32
  br i1 %34, label %35, label %38

35:                                               ; preds = %22
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %37 = call i32 @appendPQExpBufferChar(%struct.TYPE_6__* %36, i8 signext 32)
  br label %38

38:                                               ; preds = %35, %22, %17
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %40 = load i8, i8* @ESCAPE_STRING_SYNTAX, align 1
  %41 = call i32 @appendPQExpBufferChar(%struct.TYPE_6__* %39, i8 signext %40)
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %43 = load i8*, i8** %5, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = call i32 @PQclientEncoding(i32* %44)
  %46 = call i32 @appendStringLiteral(%struct.TYPE_6__* %42, i8* %43, i32 %45, i32 0)
  br label %79

47:                                               ; preds = %13, %3
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %49 = load i64, i64* %7, align 8
  %50 = mul i64 2, %49
  %51 = add i64 %50, 2
  %52 = trunc i64 %51 to i32
  %53 = call i32 @enlargePQExpBuffer(%struct.TYPE_6__* %48, i32 %52)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %47
  br label %79

56:                                               ; preds = %47
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %58 = call i32 @appendPQExpBufferChar(%struct.TYPE_6__* %57, i8 signext 39)
  %59 = load i32*, i32** %6, align 8
  %60 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %61 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %60, i32 0, i32 1
  %62 = load i8*, i8** %61, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i8, i8* %62, i64 %66
  %68 = load i8*, i8** %5, align 8
  %69 = load i64, i64* %7, align 8
  %70 = call i64 @PQescapeStringConn(i32* %59, i8* %67, i8* %68, i64 %69, i32* null)
  %71 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %72 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 8
  %74 = sext i32 %73 to i64
  %75 = add nsw i64 %74, %70
  %76 = trunc i64 %75 to i32
  store i32 %76, i32* %72, align 8
  %77 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %78 = call i32 @appendPQExpBufferChar(%struct.TYPE_6__* %77, i8 signext 39)
  br label %79

79:                                               ; preds = %56, %55, %38
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @strchr(i8*, i8 signext) #1

declare dso_local i32 @PQserverVersion(i32*) #1

declare dso_local i32 @appendPQExpBufferChar(%struct.TYPE_6__*, i8 signext) #1

declare dso_local i32 @appendStringLiteral(%struct.TYPE_6__*, i8*, i32, i32) #1

declare dso_local i32 @PQclientEncoding(i32*) #1

declare dso_local i32 @enlargePQExpBuffer(%struct.TYPE_6__*, i32) #1

declare dso_local i64 @PQescapeStringConn(i32*, i8*, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
